RESOLVED FIXED134510
Fix ServicesOverlayController teardown
https://bugs.webkit.org/show_bug.cgi?id=134510
Summary Fix ServicesOverlayController teardown
Brady Eidson
Reported 2014-07-01 14:13:28 PDT
Fix ServicesOverlayController teardown <rdar://problem/17523998>
Attachments
Patch v1 (1.39 KB, patch)
2014-07-01 14:15 PDT, Brady Eidson
mrowe: review+
Brady Eidson
Comment 1 2014-07-01 14:15:31 PDT
Created attachment 234195 [details] Patch v1
Brady Eidson
Comment 2 2014-07-01 14:21:50 PDT
Note You need to log in before you can comment on or make changes to this bug.