Fix ServicesOverlayController teardown <rdar://problem/17523998> and https://bugs.webkit.org/show_bug.cgi?id=134510

Reviewed by Mark Rowe.

* WebProcess/WebPage/mac/ServicesOverlayController.mm:
(WebKit::ServicesOverlayController::~ServicesOverlayController): Flipped logic on null-checking the overlay.

Canonical link: https://commits.webkit.org/152498@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170668 268f45cc-cd09-0410-ab3c-d52691b4dbfc